<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="signOt">Sign Out</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="usuario_y_o_contrase_a_incorrecto">usuario_y_o_contrase_a_incorrecto</string>
    <string name="Password">Password</string>
    <string name="Username">UserName</string>
    <string name="Sign_in">Sign In</string>
</resources>